STABLE: Add player table to team event page.